# zaptec-reporter

./: Dockerfile  LICENSE  README.md  docker-compose.yml  email_config.yml  pyproject.toml
.github/workflows/: ci.yml  test.yml
src/zaptec_reporter/: __init__.py  api.py  email.py  reporter.py
tests/: test_zaptec_api.py  test_zaptec_reporter.py
